fix capturetheether and ethernaut articles'  overflowing latex formulas

--- a/assets/css/styles-settings.css
+++ b/assets/css/styles-settings.css
@@ -209,6 +209,11 @@ div.rightcol-half-articles {
       font-family: Ubuntu, Sans-Serif;
       word-wrap: break-word;
     }
+    .evenSmaller {
+      font-size: 0.5vw;
+      font-family: Ubuntu, Sans-Serif;
+      word-wrap: break-word;
+    }
     a.dts, a.lts {
       font-size: 1.2vw;
       font-family: Ubuntu, Sans-Serif;
@@ -261,6 +266,11 @@ div.rightcol-half-articles {
       font-weight: normal;
     }
     h4 {
+      font-size: 1vw;
+      font-family: Ubuntu, Sans-Serif;
+      font-weight: normal;
+    }
+    h5 {
       font-size: 1vw;
       font-family: Ubuntu, Sans-Serif;
       font-weight: normal;
@@ -419,6 +429,11 @@ div.rightcol-half-articles {
       font-family: Ubuntu, Sans-Serif;
       word-wrap: break-word;
     }
+    .evenSmaller {
+      font-size: 1.1vw;
+      font-family: Ubuntu, Sans-Serif;
+      word-wrap: break-word;
+    }
     a.dts, a.lts {
       font-size: 1.8vw;
       font-family: Ubuntu, Sans-Serif;
@@ -471,6 +486,11 @@ div.rightcol-half-articles {
       display: block;
     }
     h4 {
+      font-size: 1.6vw;
+      font-family: Ubuntu, Sans-Serif;
+      font-weight: normal;
+    }
+    h5 {
       font-size: 1.6vw;
       font-family: Ubuntu, Sans-Serif;
       font-weight: normal;
@@ -625,6 +645,11 @@ div.rightcol-half-articles {
       font-family: Ubuntu, Sans-Serif;
       word-wrap: break-word;
     }
+    .evenSmaller {
+      font-size: 2.1vw;
+      font-family: Ubuntu, Sans-Serif;
+      word-wrap: break-word;
+    }
     a.dts, a.lts {
       font-size: 4vw;
       font-family: Ubuntu, Sans-Serif;
@@ -677,6 +702,11 @@ div.rightcol-half-articles {
       display: block;
     }
     h4 {
+      font-size: 3.5vw;
+      font-family: Ubuntu, Sans-Serif;
+      font-weight: normal;
+    }
+    h5 {
       font-size: 3.5vw;
       font-family: Ubuntu, Sans-Serif;
       font-weight: normal;
