--- a/blog/capture_the_ether_solutions/postStyles.css
+++ b/blog/capture_the_ether_solutions/postStyles.css
@@ -13,3 +13,9 @@ span.lc {
 a:hover {
     cursor: pointer;
 }
+
+@media screen and (max-width: 1250px) and (min-width: 0px) {
+    .smallerThanSmaller {
+        font-size: 1.8vw;
+    }
+}
